	  (2013-12-26).
	* configs/viewtool-stm32f107:  Updates to USB for F103 and USB OTG FS
	  for F107 (2013-12-16).
	* arch/arm/src/stm32/chip/stm32f3xxxx_pinmap.h:  Fix pin definitioni names
	  for SPI2 MOSI and MISO. Noted by Brian Webb (2013-12-27).
	* graphics/nxmu, nxsu, and nxglib and libc/nx, nxmu, and nxglib:  Massive
	  reshuffling of files with (hopefully) no logic changes.   This
	  reshuffling is necessary if we ever want to build graphics applications
	  as kernel builds.  There is still more today (NXTK and NXFONTS need to
	  be moved to libc as well) (2013-12-27).
	* Move libc/nx, nxmu, and nxglib to a new library, libnx.  The NX
	  graphics is not properly a part of libc (2013-12-28).
	* Move graphics/nxfonts to libnx/nxfonts (2013-12-28).
	* Move graphics/nxtk to libnx/nxtk (2013-12-28).
	* syscalls: Need to add sem_timedwait() (2013-12-28)
	* Move more files from graphics/nxmu to libnx/nxmu (2013-12-29).
	* graphics/nxmu/nx_start.c: NX server start-up wrapper function to
	  simplify starting the NX server from within the RTOS (2013-12-29).
	* configs/stm3240g-eval/kernel and configs/stm3240g-eval/scripts:  Port
	  kernel build logic from the STM32F4Discovery to the STM3240G-EVAL.
	  This will eventually support testing of the kernel mode NX server
	  (2013-12-29).
	* configs/stm3240g-eval/nxwm:  Converted to use the kconfig-frontend
	  tools (2013-12-29).
	* configs/stm3240g-eval/knxwm:  Add a kernel mode NxWM build
	  configuration (not yet verified) (2013-12-29).
	* Moved configs/stm3240g-eval/src/up_cxxinitialize.c to
	  apps/platform/stm3240g-eval/up_cxxinitialize.c:  Now it is available
	  in user-space in the kernel mode build (2013-12-29).
	* graphics/nxbe, nxsu, libnx/nxmu, and nxtk:  Need to be consistent with
	  which allocator is used in the different configurations.  Always uses
	  the user-space allocator because that one is required in certain
	  configurations (2013-12-30).