@@ -6349,3 +6349,6 @@
 	  which allocator is used in the different configurations.  Always uses
 	  the user-space allocator because that one is required in certain
 	  configurations (2013-12-30).
+	* include/nuttx/kthread.h:  Move kernel thread definitions out of
+	  os_internal.h so that the rest of the OS can start kernel threads as
+	  well (2013-12-30).
